Refactor convertToIterable for improved JSON handling
Simplifies and consolidates logic in convertToIterable to better handle JSON arrays, textual representations, and single values. Removes redundant helper methods and improves parsing of stringified arrays, including support for toString() formats.